--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [dependencies]
 js-sys = "0.3"
 wasm-bindgen = { version = "0.2", default-features = false }
+wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = [
   "Blob",
   "BlobPropertyBag",
