Implement support for return type
Support non-`Send` `Future`s for `spawn_async`.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,9 +1,6 @@
 [build]
 target = "wasm32-unknown-unknown"
-rustflags = [
-  "-C",
-  "target-feature=+atomics,+bulk-memory,+mutable-globals,+reference-types",
-]
+rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"]
 
 [unstable]
 build-std = ["panic_abort", "std"]
