Move to new version of `wasm-bindgen`

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -73,6 +73,7 @@ rustflags = [
 	"-Wunused_import_braces",
 	"-Wunused_lifetimes",
 	"-Wunused_qualifications",
+	"-Wunused_tuple_struct_fields",
 	"-Wvariant_size_differences",
 ]
 
