--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ pollster = { version = "0.2", optional = true }
 vec_map = { version = "0.8", optional = true }
 wasm-bindgen = { version = "0.2", default-features = false }
 wasm-bindgen-futures = "0.4"
+wasm-worker-core = { version = "0.0", path = "core" }
 web-sys = { version = "0.3", features = [
 	"Blob",
 	"BlobPropertyBag",
