--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -20,10 +20,12 @@ rustflags = [
 	"-Wclippy::pedantic",
 	# Allowed Clippy lints.
 	"-Aclippy::equatable_if_let",
+	"-Aclippy::future_not_send",
 	"-Aclippy::module_name_repetitions",
 	"-Aclippy::option_if_let_else",
 	"-Aclippy::redundant_pub_crate",
 	"-Aclippy::tabs_in_doc_comments",
+	"-Aclippy::unwrap_used",
 	# Clippy restriction lints.
 	"-Wclippy::as_conversions",
 	"-Wclippy::clone_on_ref_ptr",
@@ -44,7 +46,6 @@ rustflags = [
 	"-Wclippy::unnecessary_self_imports",
 	"-Wclippy::unneeded_field_pattern",
 	"-Wclippy::unseparated_literal_suffix",
-	"-Wclippy::unwrap_used",
 	# Rustdoc group.
 	"-Wrustdoc::all",
 	# Rust groups.
@@ -76,7 +77,3 @@ rustflags = [
 	"-Wunused_tuple_struct_fields",
 	"-Wvariant_size_differences",
 ]
-
-[env]
-WASM_BINDGEN_USE_NO_MODULE = "1"
-WASM_SERVER_RUNNER_NO_MODULE = "1"
