--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,9 +4,6 @@ name = "wasm-worker-core"
 publish = false
 version = "0.0.0"
 
-[features]
-raw = []
-
 [dependencies]
 js-sys = "0.3"
 once_cell = "1"
@@ -18,9 +15,16 @@ web-sys = { version = "0.3", features = [
 	"console",
 	"DedicatedWorkerGlobalScope",
 	"Url",
+	"Window",
 	"Worker",
+	"WorkerOptions",
+	"WorkerType",
 ] }
 
 [dev-dependencies]
-futures-channel = { version = "0.3", default-features = false, features = ["alloc"] }
+futures-util = { version = "0.3", default-features = false }
 wasm-bindgen-test = "0.3"
+
+[[test]]
+name = "no_module_support"
+test = false
