--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,6 +15,7 @@ web-sys = { version = "0.3", features = [
 	"BlobPropertyBag",
 	"DedicatedWorkerGlobalScope",
 	"ImageBitmap",
+	"MessageEvent",
 	"MessagePort",
 	"OffscreenCanvas",
 	"ReadableStream",
