--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,41 +1,44 @@
-[workspace]
-members = ["", "core"]
-
 [package]
 edition = "2021"
 name = "wasm-worker"
 publish = false
 version = "0.0.0"
 
-[features]
-blocking = ["dep:pollster"]
-raw = []
-registry = ["dep:vec_map"]
-
 [dependencies]
-futures-channel = "0.3"
-futures-util = { version = "0.3", default-features = false }
 js-sys = "0.3"
-once_cell = { version = "1", default-features = false }
-pin-project-lite = "0.2"
-pollster = { version = "0.2", optional = true }
-vec_map = { version = "0.8", optional = true }
+once_cell = "1"
 wasm-bindgen = { version = "0.2", default-features = false }
 wasm-bindgen-futures = "0.4"
-wasm-worker-core = { version = "0.0", path = "core" }
 web-sys = { version = "0.3", features = [
+	"AudioData",
 	"Blob",
 	"BlobPropertyBag",
 	"DedicatedWorkerGlobalScope",
+	"ImageBitmap",
 	"MessageEvent",
+	"MessagePort",
+	"OffscreenCanvas",
+	"ReadableStream",
+	"RtcDataChannel",
+	"TransformStream",
 	"Url",
+	"VideoFrame",
+	"Window",
 	"Worker",
+	"WorkerOptions",
+	"WorkerType",
+	"Worklet",
+	"WritableStream",
 ] }
 
 [dev-dependencies]
-futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
+futures-util = { version = "0.3", default-features = false }
 wasm-bindgen-test = "0.3"
 web-sys = { version = "0.3", features = ["console"] }
+
+[[test]]
+name = "no_module_support"
+test = false
 
 [patch.crates-io]
 # Waiting for PR's to be merged and a new version to be released.
