--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,10 @@ web-sys = { version = "0.3", features = ["console"] }
 name = "no_module_support"
 test = false
 
+[[test]]
+name = "util"
+test = false
+
 [patch.crates-io]
 # Waiting for PR's to be merged and a new version to be released.
 # https://github.com/rustwasm/wasm-bindgen/pull/3168
