--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ web-sys = { version = "0.3", features = [
 ] }
 
 [dev-dependencies]
-futures-util = { version = "0.3", default-features = false }
+futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
 wasm-bindgen-test = "0.3"
 web-sys = { version = "0.3", features = ["console", "Window"] }
 
