--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ wasm-bindgen = { version = "0.2", default-features = false }
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = [
 	"AudioData",
+	"AudioDataInit",
+	"AudioSampleFormat",
 	"Blob",
 	"BlobPropertyBag",
 	"DedicatedWorkerGlobalScope",
@@ -33,7 +35,7 @@ web-sys = { version = "0.3", features = [
 [dev-dependencies]
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
 wasm-bindgen-test = "0.3"
-web-sys = { version = "0.3", features = ["console", "Window"] }
+web-sys = { version = "0.3", features = ["AudioDataCopyToOptions", "console", "Window"] }
 
 [[test]]
 name = "no_module_support"
