Pass `WorkerHandle` in `set_message_handler`

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -20,6 +20,7 @@ rustflags = [
 	"-Wclippy::pedantic",
 	# Allowed Clippy lints.
 	"-Aclippy::equatable_if_let",
+	"-Aclippy::explicit_deref_methods",
 	"-Aclippy::future_not_send",
 	"-Aclippy::module_name_repetitions",
 	"-Aclippy::option_if_let_else",
