Add more module support failure tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,4 +51,9 @@ test = false
 # https://github.com/rustwasm/wasm-bindgen/pull/3247
 # https://github.com/rustwasm/wasm-bindgen/pull/3252
 # https://github.com/rustwasm/wasm-bindgen/pull/3279 (merged)
+# https://github.com/rustwasm/wasm-bindgen/pull/3293
+js-sys = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "despair" }
 wasm-bindgen = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "despair" }
+wasm-bindgen-futures = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "despair" }
+wasm-bindgen-test = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "despair" }
+web-sys = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "despair" }
