Implement `ImageBitmap` support check and test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ web-sys = { version = "0.3", features = [
 	"BlobPropertyBag",
 	"DedicatedWorkerGlobalScope",
 	"ImageBitmap",
+	"ImageData",
 	"MessageEvent",
 	"MessagePort",
 	"OffscreenCanvas",
@@ -25,7 +26,9 @@ web-sys = { version = "0.3", features = [
 	"TransformStream",
 	"Url",
 	"VideoFrame",
+	"Window",
 	"Worker",
+	"WorkerGlobalScope",
 	"WorkerOptions",
 	"WorkerType",
 	"WritableStream",
