--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ web-sys = { version = "0.3", features = [
 	"Blob",
 	"BlobPropertyBag",
 	"DedicatedWorkerGlobalScope",
+	"DomException",
 	"ImageBitmap",
 	"ImageData",
 	"MessageEvent",
@@ -23,6 +24,7 @@ web-sys = { version = "0.3", features = [
 	"OffscreenCanvas",
 	"ReadableStream",
 	"RtcDataChannel",
+	"RtcPeerConnection",
 	"TransformStream",
 	"Url",
 	"VideoFrame",
@@ -37,7 +39,12 @@ web-sys = { version = "0.3", features = [
 [dev-dependencies]
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
 wasm-bindgen-test = "0.3"
-web-sys = { version = "0.3", features = ["AudioDataCopyToOptions", "console", "Window"] }
+web-sys = { version = "0.3", features = [
+	"AudioDataCopyToOptions",
+	"console",
+	"RtcDataChannelState",
+	"Window",
+] }
 
 [[test]]
 name = "no_module_support"
