--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ web-sys = { version = "0.3", features = [
 	"DomException",
 	"ImageBitmap",
 	"ImageData",
+	"MessageChannel",
 	"MessageEvent",
 	"MessagePort",
 	"OffscreenCanvas",
