--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ name = "wasm-worker"
 publish = false
 version = "0.0.0"
 
+[features]
+futures = ["dep:futures-util"]
+
 [dependencies]
+futures-util = { version = "0.3", optional = true, default-features = false }
 js-sys = "0.3"
 once_cell = "1"
 wasm-bindgen = { version = "0.2", default-features = false }
