--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ web-sys = { version = "0.3", features = [
 ] }
 
 [dev-dependencies]
+anyhow = "1"
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
 wasm-bindgen-test = "0.3"
 web-sys = { version = "0.3", features = [
