--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,7 @@ test = false
 # https://github.com/rustwasm/wasm-bindgen/pull/3293 (merged)
 # https://github.com/rustwasm/wasm-bindgen/pull/3296
 # https://github.com/rustwasm/wasm-bindgen/pull/3299
-# https://github.com/rustwasm/wasm-bindgen/pull/3302
+# https://github.com/rustwasm/wasm-bindgen/pull/3302 (merged)
 js-sys = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "despair" }
 wasm-bindgen = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "despair" }
 wasm-bindgen-futures = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "despair" }
