--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ web-sys = { version = "0.3", features = [
 	"AudioData",
 	"AudioDataInit",
 	"AudioSampleFormat",
+	"AudioWorklet",
 	"Blob",
 	"BlobPropertyBag",
 	"DedicatedWorkerGlobalScope",
@@ -26,6 +27,7 @@ web-sys = { version = "0.3", features = [
 	"MessageChannel",
 	"MessageEvent",
 	"MessagePort",
+	"OfflineAudioContext",
 	"OffscreenCanvas",
 	"ReadableStream",
 	"RtcDataChannel",
