Introduce `global` module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ web-sys = { version = "0.3", features = [
 	"OfflineAudioContext",
 	"OffscreenCanvas",
 	"ReadableStream",
+	"RequestInit",
 	"RtcDataChannel",
 	"RtcPeerConnection",
 	"TransformStream",
