--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,24 @@ publish = false
 version = "0.0.0"
 
 [features]
-futures = ["dep:futures-util"]
+futures = ["dep:futures-core"]
 
 [dependencies]
-futures-util = { version = "0.3", optional = true, default-features = false }
+futures-core = { version = "0.3", optional = true, default-features = false }
 js-sys = "0.3"
 once_cell = "1"
 wasm-bindgen = { version = "0.2", default-features = false }
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = [
+	"AbortController",
+	"AbortSignal",
 	"AudioData",
 	"AudioDataInit",
 	"AudioSampleFormat",
 	"AudioWorklet",
+	"AudioWorkletNode",
+	"AudioWorkletNodeOptions",
+	"BaseAudioContext",
 	"Blob",
 	"BlobPropertyBag",
 	"DedicatedWorkerGlobalScope",
@@ -31,6 +36,7 @@ web-sys = { version = "0.3", features = [
 	"OffscreenCanvas",
 	"ReadableStream",
 	"RequestInit",
+	"Response",
 	"RtcDataChannel",
 	"RtcPeerConnection",
 	"TransformStream",
