--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,10 @@ web-sys = { version = "0.3", features = [
 name = "no_module_support"
 test = false
 
+[[test]]
+name = "worklet"
+required-features = ["worklet"]
+
 [patch.crates-io]
 # Waiting for PR's to be merged and a new version to be released.
 # https://github.com/rustwasm/wasm-bindgen/pull/3168
