--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -23,6 +23,7 @@ rustflags = [
 	"-Aclippy::equatable_if_let",
 	"-Aclippy::explicit_deref_methods",
 	"-Aclippy::future_not_send",
+	"-Aclippy::module_inception",
 	"-Aclippy::module_name_repetitions",
 	"-Aclippy::option_if_let_else",
 	"-Aclippy::tabs_in_doc_comments",
