--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,10 +57,13 @@ web-sys = { version = "0.3", features = [
 ] }
 
 [dev-dependencies]
+console_error_panic_hook = "0.1"
 futures-channel = { version = "0.3", default-features = false, features = ["alloc"] }
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
+utf16_lit = "2"
 wasm-bindgen-test = "0.3"
 web-sys = { version = "0.3", features = [
+	"AudioContext",
 	"AudioDataCopyToOptions",
 	"console",
 	"RtcDataChannelState",
