--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,26 @@ version = "0.0.0"
 
 [features]
 futures = ["dep:futures-core"]
+message = [
+	"web-sys/AudioData",
+	"web-sys/AudioDataInit",
+	"web-sys/AudioSampleFormat",
+	"web-sys/DomException",
+	"web-sys/ImageBitmap",
+	"web-sys/ImageData",
+	"web-sys/MessageChannel",
+	"web-sys/MessageEvent",
+	"web-sys/MessagePort",
+	"web-sys/OffscreenCanvas",
+	"web-sys/ReadableStream",
+	"web-sys/RtcDataChannel",
+	"web-sys/RtcPeerConnection",
+	"web-sys/TransformStream",
+	"web-sys/VideoFrame",
+	"web-sys/VideoFrameBufferInit",
+	"web-sys/VideoPixelFormat",
+	"web-sys/WritableStream",
+]
 worklet = [
 	"web-sys/AbortController",
 	"web-sys/AbortSignal",
@@ -27,33 +47,15 @@ once_cell = "1"
 wasm-bindgen = { version = "0.2", default-features = false }
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = [
-	"AudioData",
-	"AudioDataInit",
-	"AudioSampleFormat",
 	"Blob",
 	"BlobPropertyBag",
 	"DedicatedWorkerGlobalScope",
-	"DomException",
-	"ImageBitmap",
-	"ImageData",
-	"MessageChannel",
-	"MessageEvent",
-	"MessagePort",
-	"OffscreenCanvas",
-	"ReadableStream",
-	"RtcDataChannel",
-	"RtcPeerConnection",
-	"TransformStream",
 	"Url",
-	"VideoFrame",
-	"VideoFrameBufferInit",
-	"VideoPixelFormat",
 	"Window",
 	"Worker",
 	"WorkerGlobalScope",
 	"WorkerOptions",
 	"WorkerType",
-	"WritableStream",
 ] }
 
 [dev-dependencies]
@@ -69,6 +71,14 @@ web-sys = { version = "0.3", features = [
 	"RtcDataChannelState",
 ] }
 
+[[example]]
+name = "basic"
+required-features = ["message", "worklet"]
+
+[[test]]
+name = "message_handler"
+required-features = ["message"]
+
 [[test]]
 name = "no_import_support"
 required-features = ["worklet"]
@@ -79,12 +89,24 @@ name = "no_module_support"
 test = false
 
 [[test]]
+name = "race_has_image_bitmap_support"
+required-features = ["message"]
+
+[[test]]
+name = "race_message_has_support"
+required-features = ["message"]
+
+[[test]]
 name = "race_worklet_module_default"
 required-features = ["worklet"]
 
 [[test]]
 name = "race_worklet_module_has_support"
 required-features = ["worklet"]
+
+[[test]]
+name = "transfer"
+required-features = ["message"]
 
 [[test]]
 name = "worklet"
