Remove all classic JS handling and update lints

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -19,45 +19,89 @@ rustflags = [
 	"-Wclippy::cargo",
 	"-Wclippy::nursery",
 	"-Wclippy::pedantic",
+	# Clippy restriction lints.
+	"-Wclippy::allow_attributes",
+	"-Wclippy::allow_attributes_without_reason",
+	"-Wclippy::as_conversions",
+	"-Wclippy::assertions_on_result_states",
+	"-Wclippy::clone_on_ref_ptr",
+	"-Wclippy::create_dir",
+	"-Wclippy::dbg_macro",
+	"-Wclippy::decimal_literal_representation",
+	"-Wclippy::default_union_representation",
+	"-Wclippy::empty_drop",
+	"-Wclippy::empty_structs_with_brackets",
+	"-Wclippy::exit",
+	"-Wclippy::filetype_is_file",
+	"-Wclippy::float_cmp_const",
+	"-Wclippy::fn_to_numeric_cast_any",
+	"-Wclippy::format_push_string",
+	"-Wclippy::get_unwrap",
+	"-Wclippy::if_then_some_else_none",
+	"-Wclippy::impl_trait_in_params",
+	"-Wclippy::indexing_slicing",
+	"-Wclippy::large_include_file",
+	"-Wclippy::lossy_float_literal",
+	"-Wclippy::min_ident_chars",
+	"-Wclippy::missing_assert_message",
+	"-Wclippy::missing_docs_in_private_items",
+	"-Wclippy::mixed_read_write_in_expression",
+	# Breaks Rust Analyzer.
+	# "-Wclippy::multiple_unsafe_ops_per_block",
+	"-Wclippy::mutex_atomic",
+	"-Wclippy::needless_raw_strings",
+	"-Wclippy::non_ascii_literal",
+	"-Wclippy::partial_pub_fields",
+	"-Wclippy::print_stderr",
+	"-Wclippy::print_stdout",
+	"-Wclippy::pub_without_shorthand",
+	"-Wclippy::rc_buffer",
+	"-Wclippy::rc_mutex",
+	"-Wclippy::redundant_type_annotations",
+	"-Wclippy::ref_patterns",
+	"-Wclippy::rest_pat_in_fully_bound_structs",
+	"-Wclippy::same_name_method",
+	"-Wclippy::self_named_module_files",
+	"-Wclippy::semicolon_outside_block",
+	"-Wclippy::single_char_lifetime_names",
+	"-Wclippy::str_to_string",
+	"-Wclippy::string_add",
+	"-Wclippy::string_slice",
+	"-Wclippy::string_to_string",
+	"-Wclippy::suspicious_xor_used_as_pow",
+	"-Wclippy::todo",
+	"-Wclippy::try_err",
+	"-Wclippy::undocumented_unsafe_blocks",
+	"-Wclippy::unimplemented",
+	"-Wclippy::unnecessary_safety_doc",
+	"-Wclippy::unnecessary_self_imports",
+	"-Wclippy::unneeded_field_pattern",
+	"-Wclippy::unseparated_literal_suffix",
+	"-Wclippy::unwrap_used",
+	"-Wclippy::use_debug",
+	"-Wclippy::verbose_file_reads",
 	# Allowed Clippy lints.
+	"-Aclippy::await_holding_refcell_ref",
 	"-Aclippy::equatable_if_let",
 	"-Aclippy::explicit_deref_methods",
 	"-Aclippy::future_not_send",
 	"-Aclippy::module_inception",
 	"-Aclippy::module_name_repetitions",
 	"-Aclippy::option_if_let_else",
+	"-Aclippy::redundant_pub_crate",
 	"-Aclippy::tabs_in_doc_comments",
-	"-Aclippy::unwrap_used",
-	# Clippy restriction lints.
-	"-Wclippy::as_conversions",
-	"-Wclippy::clone_on_ref_ptr",
-	"-Wclippy::empty_structs_with_brackets",
-	"-Wclippy::lossy_float_literal",
-	"-Wclippy::missing_docs_in_private_items",
-	"-Wclippy::rest_pat_in_fully_bound_structs",
-	"-Wclippy::same_name_method",
-	"-Wclippy::single_char_lifetime_names",
-	"-Wclippy::str_to_string",
-	"-Wclippy::string_add",
-	"-Wclippy::string_slice",
-	"-Wclippy::string_to_string",
-	"-Wclippy::todo",
-	"-Wclippy::try_err",
-	"-Wclippy::undocumented_unsafe_blocks",
-	"-Wclippy::unnecessary_self_imports",
-	"-Wclippy::unneeded_field_pattern",
-	"-Wclippy::unseparated_literal_suffix",
 	# Rustdoc group.
 	"-Wrustdoc::all",
 	# Rust groups.
 	"-Wfuture_incompatible",
-	"-Wnonstandard_style",
 	"-Wrust_2018_compatibility",
 	"-Wrust_2018_idioms",
 	"-Wrust_2021_compatibility",
 	"-Wunused",
 	# Rust lints.
 	"-Wdeprecated_in_future",
+	"-Wffi_unwind_calls",
+	"-Winvalid-reference_casting",
 	"-Wmacro_use_extern_crate",
 	"-Wmeta_variable_misuse",
 	"-Wmissing_abi",
