--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,5 @@
 [build]
-rustdocflags = [
-	"-Ctarget-feature=+atomics,+bulk-memory,+mutable-globals",
-	"--cfg=web_sys_unstable_apis",
-]
+rustdocflags = ["-Ctarget-feature=+atomics,+bulk-memory,+mutable-globals"]
 target = "wasm32-unknown-unknown"
 
 [unstable]
